@@ -1,3 +1,6 @@
+2012-04-23  6.7.6-8 Anthony Thyssen <A.Thyssen@griffith...>
+  * Added the RobidouxSharp filter (originally defined Dec 2011)
+
 2012-04-21  6.7.6-7 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.6-7, SVN revision 7587.
 
